Optimise script and styles loading

--- a/views/index.twig
+++ b/views/index.twig
@@ -17,7 +17,7 @@
         <div class="bullet"></div>
         <div class="hole"></div>
     </div>
-    <script type='application/javascript' src='/javascripts/roulette.js'></script>
+    <script async type='application/javascript' src='/javascripts/roulette.js'></script>
     <audio id="load-sound" preload="auto">
         <source src="/sounds/gun-cocking-01.mp3" type="audio/mpeg">
     </audio>
